# task-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
headers/: Calendar.h  Day.h  Display.h  Event.h  EventList.h  Goal.h  GoalList.h  Month.h
helper-structs/: Date.hpp  Time.hpp
src/: CMakeLists.txt  Calendar.cpp  Day.cpp  Display.cpp  Event.cpp  EventList.cpp  Goal.cpp  GoalList.cpp  Makefile  Month.cpp  cmake_install.cmake  main.cpp
test/: CMakeLists.txt  test.cpp
